@@ -160,6 +160,7 @@ importFrom(utils,packageDescription)
 importFrom(utils,read.table)
 importFrom(yaml,as.yaml)
 importFrom(yaml,yaml.load)
+importFrom(yaml,yaml.load_file)
 importMethodsFrom(methods,initialize)
 importMethodsFrom(methods,show)
 useDynLib(universalmotif)
