@@ -22,6 +22,6 @@ These objects are imported from other packages. Follow the links
 below to see their documentation.
 
 \describe{
-  \item{BiocGenerics}{\code{\link[BiocGenerics]{cbind}}, \code{\link[BiocGenerics]{subset}}, \code{\link[BiocGenerics:row_colnames]{rownames}}, \code{\link[BiocGenerics:row_colnames]{colnames}}, \code{\link[BiocGenerics:nrow]{ncol}}, \code{\link[BiocGenerics]{nrow}}, \code{\link[BiocGenerics:matrix-summary]{rowSums}}, \code{\link[BiocGenerics:matrix-summary]{colSums}}, \code{\link[BiocGenerics:matrix-summary]{colMeans}}, \code{\link[BiocGenerics:matrix-summary]{rowMeans}}, \code{\link[BiocGenerics]{normalize}}, \code{\link[BiocGenerics]{as.data.frame}}}
+  \item{BiocGenerics}{\code{\link[BiocGenerics]{cbind}}, \code{\link[BiocGenerics]{subset}}, \code{\link[BiocGenerics]{rownames}}, \code{\link[BiocGenerics]{colnames}}, \code{\link[BiocGenerics]{ncol}}, \code{\link[BiocGenerics]{nrow}}, \code{\link[BiocGenerics]{rowSums}}, \code{\link[BiocGenerics]{colSums}}, \code{\link[BiocGenerics]{colMeans}}, \code{\link[BiocGenerics]{rowMeans}}, \code{\link[BiocGenerics]{normalize}}, \code{\link[BiocGenerics]{as.data.frame}}}
 }}
 
