@@ -6,6 +6,7 @@
 \alias{universalmotif-class}
 \alias{universalmotif}
 \alias{[,universalmotif-method}
+\alias{[<-,universalmotif,ANY,ANY,ANY-method}
 \alias{[<-,universalmotif-method}
 \alias{initialize,universalmotif-method}
 \alias{show,universalmotif-method}
@@ -25,7 +26,7 @@
 \usage{
 \S4method{[}{universalmotif}(x, i)
 
-\S4method{[}{universalmotif}(x, i) <- value
+\S4method{[}{universalmotif,ANY,ANY,ANY}(x, i) <- value
 
 \S4method{initialize}{universalmotif}(.Object, name, altname, family,
   organism, motif, alphabet = "DNA", type, icscore, nsites,
