@@ -4,7 +4,7 @@
 \alias{write_meme}
 \title{Export motifs in MEME format.}
 \usage{
-write_meme(motifs, file, version = 4, bkg, strand)
+write_meme(motifs, file, version = 5, bkg, strand, overwrite = FALSE)
 }
 \arguments{
 \item{motifs}{See \code{\link[=convert_motifs]{convert_motifs()}} for acceptable formats.}
@@ -19,6 +19,8 @@ background frequencies will be set to freq = 1/length(alphabet)}
 
 \item{strand}{\code{character} If missing, will use strand from motif objects (if identical);
 otherwise will default to "+ -"}
+
+\item{overwrite}{\code{logical(1)} Overwrite existing file.}
 }
 \value{
 \code{NULL}, invisibly.
